deployments/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: im-system
  labels:
    app.kubernetes.io/part-of: im
