deployments/kubernetes/base/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-client
  labels:
    app.kubernetes.io/name: im-server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: im-server
  ports:
    - name: http
      port: 6060
      targetPort: http
    - name: grpc
      port: 16060
      targetPort: client-grpc
